tests/diagnostics/declarations/types/duplicate_name/expect.txt
# exit: 1
input/main.coppice:5:6: error: duplicate type 'User'
  type User :: struct {
       ^
